--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Consulta de Alunos</title>
     <link rel="stylesheet" href="style.css" />
 
+    <script src="auth.js"></script>
     <script src="script.js" defer></script>
   </head>
 
