--- a/login.html
+++ b/login.html
@@ -74,6 +74,16 @@
               <p>Senha: <code>mani123</code></p>
             </div>
             <div class="user-card">
+              <strong>🌍 Prof. Mundo do Trabalho</strong>
+              <p>Usuário: <code>prof.mundotrabalho</code></p>
+              <p>Senha: <code>mundo123</code></p>
+            </div>
+            <div class="user-card">
+              <strong>🤝 Prof. Convívio</strong>
+              <p>Usuário: <code>prof.convivio</code></p>
+              <p>Senha: <code>convivio123</code></p>
+            </div>
+            <div class="user-card">
               <strong>⚙️ Administrador</strong>
               <p>Usuário: <code>admin</code></p>
               <p>Senha: <code>admin123</code></p>
