--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 type="radio"
                 id="ausente"
                 name="statusPresenca"
-                value="A"
+                value="F"
               />
               <label for="ausente">Ausente</label>
             </div>
