--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://colegiorealengo.br/novo-portal/assets/images/icons/online_course.png" type="image/x-icon">
     <title>CEDESP - Login</title>
     <link rel="stylesheet" href="login.css" />
   </head>
