--- a/stats.html
+++ b/stats.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://colegiorealengo.br/novo-portal/assets/images/icons/online_course.png" type="image/x-icon">
     <title>CEDESP - Estatísticas Administrativas</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
