--- a/stats.html
+++ b/stats.html
@@ -102,6 +102,33 @@
         </div>
       </section>
 
+      <!-- Análises Visuais Avançadas -->
+      <section class="visual-analysis-section">
+        <h2>📊 Análises Visuais</h2>
+
+        <div class="visual-analysis-grid">
+          <!-- Distribuição por Período -->
+          <div class="analysis-container">
+            <h3>🕐 Distribuição por Período</h3>
+            <canvas id="periodDistributionChart"></canvas>
+          </div>
+
+          <!-- Taxa de Aprovação por Curso -->
+          <div class="analysis-container">
+            <h3>📈 Taxa de Aprovação por Curso</h3>
+            <canvas id="approvalRateChart"></canvas>
+          </div>
+        </div>
+
+        <!-- Alunos que Precisam de Atenção -->
+        <div class="attention-section">
+          <h3>⚠️ Alunos que Precisam de Atenção</h3>
+          <div class="attention-grid" id="attentionStudentsGrid">
+            <!-- Será preenchido dinamicamente -->
+          </div>
+        </div>
+      </section>
+
       <!-- Tabelas Detalhadas -->
       <section class="detailed-stats">
         <div class="stats-tables">
