--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
           <h1>Sistema de Gestão Acadêmica</h1>
           <p class="subtitle">Consulta e acompanhamento de alunos</p>
         </div>
-        <button id="themeToggle" class="theme-toggle" title="Alternar tema">
+        <div class="header-actions">
+          <button id="statsButton" class="stats-btn" style="display: none;" onclick="window.open('stats.html', '_blank')" title="Estatísticas Administrativas">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+              <path d="M4 11H2v3h2v-3zm5-4H7v7h2V7zm5-5v12h-2V2h2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zM1 11a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3z"/>
+            </svg>
+            Estatísticas
+          </button>
+          <button id="themeToggle" class="theme-toggle" title="Alternar tema">
           <svg
             class="sun-icon"
             xmlns="http://www.w3.org/2000/svg"
