--- a/stats.html
+++ b/stats.html
@@ -38,36 +38,45 @@
 
       <!-- Cards de Resumo -->
       <section class="stats-summary">
-        <div class="stats-grid">
-          <div class="stat-card">
-            <div class="stat-icon">👥</div>
+        <div class="stats-grid" style="gap: 1rem">
+          <div
+            class="stat-card"
+            style="min-width: 140px; max-width: 160px; padding: 0.7rem 1rem"
+          >
+            <div class="stat-icon" style="font-size: 1.7rem">👥</div>
             <div class="stat-content">
-              <h3 id="totalStudents">0</h3>
-              <p>Total de Alunos</p>
+              <h3 id="totalStudents" style="font-size: 1.5rem">0</h3>
+              <p style="font-size: 0.95rem">Total de Alunos</p>
             </div>
           </div>
-
-          <div class="stat-card">
-            <div class="stat-icon">✅</div>
+          <div
+            class="stat-card"
+            style="min-width: 140px; max-width: 160px; padding: 0.7rem 1rem"
+          >
+            <div class="stat-icon" style="font-size: 1.7rem">✅</div>
             <div class="stat-content">
-              <h3 id="approvedStudents">0</h3>
-              <p>Aprovados</p>
+              <h3 id="approvedStudents" style="font-size: 1.5rem">0</h3>
+              <p style="font-size: 0.95rem">Aprovados</p>
             </div>
           </div>
-
-          <div class="stat-card">
-            <div class="stat-icon">⚠️</div>
+          <div
+            class="stat-card"
+            style="min-width: 140px; max-width: 160px; padding: 0.7rem 1rem"
+          >
+            <div class="stat-icon" style="font-size: 1.7rem">⚠️</div>
             <div class="stat-content">
-              <h3 id="inProgressStudents">0</h3>
-              <p>Em Curso</p>
+              <h3 id="inProgressStudents" style="font-size: 1.5rem">0</h3>
+              <p style="font-size: 0.95rem">Em Curso</p>
             </div>
           </div>
-
-          <div class="stat-card">
-            <div class="stat-icon">❌</div>
+          <div
+            class="stat-card"
+            style="min-width: 140px; max-width: 160px; padding: 0.7rem 1rem"
+          >
+            <div class="stat-icon" style="font-size: 1.7rem">❌</div>
             <div class="stat-content">
-              <h3 id="failedStudents">0</h3>
-              <p>Reprovados</p>
+              <h3 id="failedStudents" style="font-size: 1.5rem">0</h3>
+              <p style="font-size: 0.95rem">Reprovados</p>
             </div>
           </div>
         </div>
