--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@
           </button>
         </form>
 
-        <div class="login-help">
+        <!-- <div class="login-help">
           <h3>Usuários de Teste:</h3>
           <div class="test-users">
             <div class="user-card">
@@ -90,7 +90,7 @@
               <p>Senha: <code>admin123</code></p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
