tirei campos extras

--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
           </div>
         </div>
 
-        <div class="filter-group">
+        <!-- <div class="filter-group">
           <label for="periodoFilter">Período</label>
           <select id="periodoFilter">
             <option value="">Todos os períodos</option>
             <option value="Tarde">Tarde</option>
             <option value="Noite">Noite</option>
           </select>
-        </div>
+        </div> -->
 
         <div class="filter-group">
-          <label for="cursoFilter">Curso</label>
+          <label for="cursoFilter">Curso - Período</label>
           <select id="cursoFilter">
-            <option value="">Todos os cursos</option>
+            <option value="">Tarde e Noite</option>
             <!-- Opções serão preenchidas dinamicamente baseadas nas permissões do usuário -->
           </select>
         </div>
