--- a/stats.html
+++ b/stats.html
@@ -165,6 +165,7 @@
           <!-- Top Alunos -->
           <div class="table-container">
             <h3>🏆 Melhores Alunos (Top 10)</h3>
+            <p class="table-description">Ranking baseado em média acadêmica (60%) e frequência (40%)</p>
             <div class="table-wrapper">
               <table id="topStudentsTable">
                 <thead>
@@ -173,6 +174,9 @@
                     <th>Nome</th>
                     <th>Curso</th>
                     <th>Média</th>
+                    <th>Faltas</th>
+                    <th>Presença</th>
+                    <th>Pontuação</th>
                     <th>Situação</th>
                   </tr>
                 </thead>
