--- a/stats.html
+++ b/stats.html
@@ -165,7 +165,9 @@
           <!-- Top Alunos -->
           <div class="table-container">
             <h3>🏆 Melhores Alunos (Top 10)</h3>
-            <p class="table-description">Ranking baseado em média acadêmica (60%) e frequência (40%)</p>
+            <p class="table-description">
+              Ranking baseado em média acadêmica (60%) e frequência (40%)
+            </p>
             <div class="table-wrapper">
               <table id="topStudentsTable">
                 <thead>
